// Zoe S. 
syntax = "proto3";

package services;

option java_multiple_files = true;
option java_package = "service";
option java_outer_classname = "FlightProto";

message TrackFlightRequest {
  string flight_number = 1;
}

message SearchFlightsRequest {
  string origin = 1;
  string destination = 2;
}

message FlightDetails {
  string flight_number = 1;
  string origin = 2;
  string destination = 3;
  string departure_time = 4;
  string arrival_time = 5;
  int32 duration_minutes = 6;
}

message FlightSearchResult {
  repeated FlightDetails flights = 1;
}

service Flight {
  rpc trackFlight (TrackFlightRequest) returns (FlightDetails) {}
  rpc searchFlights (SearchFlightsRequest) returns (FlightSearchResult) {}
}
